4 Languages; Cost: 0.6; Saving while shutting down;